# libtorch-resnet

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  resnet.py
